# Cleitinho

./: Aplicativo.c  CMakeLists.txt  README.md  main.c
Clientes/: Cliente.c  Cliente.h
Ordens/: Ordem.c  Ordem.h
Pecas/: Peca.c  Peca.h
util/: util.c  util.h
